--- a/Travel Partner/app/build.gradle
+++ b/Travel Partner/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
     id 'kotlin-android-extensions'
-    id 'com.google.gms.google-services'  // Google Services plugin
 }
 
 android {
@@ -32,6 +32,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -42,15 +45,21 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
-    implementation platform('com.google.firebase:firebase-bom:28.0.1') // Import the Firebase BoM
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-firestore-ktx'
-    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0' //For ImageSlider in HomeActivity
+    implementation platform('com.google.firebase:firebase-bom:28.1.0') // Import the Firebase BoM
+    implementation 'com.google.firebase:firebase-auth-ktx' //FireBase
+    implementation 'com.google.firebase:firebase-firestore-ktx' //FireBase
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4' //NavigationBar
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0' //Make ImageView circular
+
 
 }
